# nrf52840-mdk-usb-dongle

tools/ble_sniffer/extcap/: nrf_sniffer_ble.py  nrf_sniffer_ble.sh  pyproject.toml
tools/ble_sniffer/extcap/extcap/: __main__.py
