[project]
name = "extcap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["psutil>=7.2.2", "pyserial>=3.5"]

[project.scripts]
nrf-sniffer-ble = "extcap.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
